--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,14 +35,14 @@ body {
 
 p {
     font-family: var(--primary-font);
-    color: purple;
+    color: black;
     width: 100%;
     text-align: start;
     margin-right: 10px;
     margin-left: 10px;
     padding-right: 10px;
     padding-left: 10px;
-    font-size: 1em;
+    font-size: 20px;
     display: flex;
 }
 
@@ -54,23 +54,41 @@ h3 {
     margin: 2rem;
 }
 
+h6 {
+    font-size: 1rem;
+    font-family: var(--primary-font);
+}
+
 /* Element styles*/
 .source-link {
     font-size: 10px;
 }
 
 /*Start screen*/
-
+#startScreen {
+    margin: auto;
+    margin-top: 50px;
+    position: relative;
+    max-width: 300px;
+    max-height: 250px;
+    background-color: var(--highlight-color);
+    color: #333;
+    font-family: var(--primary-font);
+    font-size: 10px;
+    text-align: center;
+    border: 8px solid;
+    border-radius: 10px;
+    box-shadow: 0 1px 32px var(--highlight-color-headers);
+}
 
 
 
 /* Game */
-
-#gameboard .card {
+.card-front {
     max-width: 350px;
     max-height: 350px;
     background-image: url(https://images.pexels.com/photos/2757549/pexels-photo-2757549.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
-    background-color: var(--primary-color);
+    background-color: var(--highlight-color);
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -79,10 +97,37 @@ h3 {
     padding: 10px;
     margin: 10px;
     border-color: #DAF033;
+    border-radius: 0;
 }
 
-/*
-#information .card {
+.card-back {
+    max-width: 350px;
+    max-height: 350px;
+    background-color: var(--highlight-color);
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    min-width: auto;
+    padding: 10px;
+    margin: 10px;
+    border-color: #DAF033;
+    border-radius: 0;
+}
+
+.card-body {
+    font-size: 1rem;
+    display: flex;
+    position: static;
+    max-width: fit-content;
+}
+
+.card-img {
+    max-height: 150px;
+    max-width: 100%;
+    position: relative;
+}
+
+/*#information .card {
     max-width: 350px;
     max-height: 350px;
     background-color: var(--primary-color) !important;
@@ -94,13 +139,6 @@ h3 {
     padding: 10px;
     margin: 10px;
 }*/
-
-.card-text {
-    background-color: var(--primary-color);
-    text-wrap: wrap;
-    color: var(--highlight-color);
-    font-size: 10px;
-}
 
 #gameboard {
     padding: 10px;
