--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,48 +84,82 @@ h6 {
 
 
 /* Game */
-.card-front {
-    max-width: 350px;
-    max-height: 350px;
-    background-image: url(https://images.pexels.com/photos/2757549/pexels-photo-2757549.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
-    background-color: var(--highlight-color);
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    min-width: auto;
-    padding: 10px;
+.game-container {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-gap: 10px;
     margin: 10px;
-    border-color: #DAF033;
-    border-radius: 0;
+    justify-content: center;
 }
 
-.card-back {
-    max-width: 350px;
-    max-height: 350px;
-    background-color: var(--highlight-color);
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    min-width: auto;
-    padding: 10px;
-    margin: 10px;
-    border-color: #DAF033;
-    border-radius: 0;
-}
-
-.card-body {
-    font-size: 1rem;
+.view {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     display: flex;
-    position: static;
-    max-width: fit-content;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    border-width: 2px;
+    border-style: solid;
+    flex-direction: row;
 }
 
-.card-img {
-    max-height: 150px;
-    max-width: 100%;
+.game-card {
+    height: 175px;
+    width: 125px;
+}
+
+.game-card .card-front img {
+    width: 50px;
+}
+
+.cards .game-card {
+    cursor: pointer;
+    user-select: none;
     position: relative;
 }
+
+/*
+.cards .game-card .view {
+    display: flex;
+    justify-content: center;
+    border-color: #DAF033;
+    align-items: center;
+}
+
+.game-card .view {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    position: absolute;
+}
+
+.cards {
+    height: 350px;
+    width: 350px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
+
+.card-front {
+    background-image: url(https://images.pexels.com/photos/2757549/pexels-photo-2757549.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+    background-color: var(--highlight-color);
+}
+
+
+
+.card-back {
+    background-color: var(--highlight-color);
+}
+
+.game-card .card-back img {
+    width: 50px;
+    height: 50px;
+}*/
+
 
 /*#information .card {
     max-width: 350px;
@@ -147,18 +181,6 @@ h6 {
     border-color: #DAF033;
     box-shadow: 10px 5px 5px var(--secondary-color);
 }
-
-/*
-.cards, .card, .view{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-.cards{
-    flex-wrap: wrap;
-    justify-content: space-between;
-    min-width:auto;
-  }*/
 
 /*Navbar styling*/
 #navbar {
