--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ h6 {
 
 /* Game */
 
-#countdown {
+/*#countdown {
     font-family: var(--secondary-font);
     color: var(--primary-color);
     text-align: center;
@@ -100,17 +100,17 @@ h6 {
     align-items: start;
     padding: 10px;
     border: solid var(--secondary-color);
-}
+}*/
 
-#time {
-    font-size: 2em;
+.actions {
+    display: flex;
+    justify-content: center;
 }
 
 .game-section-container {
     display: grid;
     grid-template-columns: 1fr, 1fr, 1fr, 1fr;
-    row-gap: 10px;
-    grid-gap: 20px;
+    grid-gap: 10px;
     justify-content: center;
     align-content: center;
     height: 100%;
@@ -135,10 +135,18 @@ h6 {
 .game-card {
     height: 90px;
     width: 60px;
+    margin: 5px;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: all 0.5s ease-in-out;
 }
 
 .game-card .card-front img {
     width: 75px;
+}
+
+.game-card .card-back {
+    transform: rotateY(180deg);
 }
 
 .cards .game-card {
@@ -152,12 +160,68 @@ h6 {
 
 .card-front .card-back {
     background-color: var(--highlight-color);
+    backface-visibility: hidden;
 }
 
-.hidden {
+
+/*.hidden {
     display: none;
+}*/
+
+#gameboard {
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #345030;
+    background-image: url(https://images.pexels.com/photos/2757549/pexels-photo-2757549.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+    background-color: var(--highlight-color);
+    border-color: #DAF033;
+    box-shadow: 10px 5px 5px var(--secondary-color);
+    width: 100%;
+    height: 100%;
 }
 
+/*Navbar styling*/
+#navbar {
+    background-color: blue;
+    color: greenyellow;
+    font-family: (--secondary-font);
+    font-size: 30px;
+    align-items: end;
+    display: flex;
+    min-width: 100%;
+    top: 0;
+    margin: 0;
+}
+
+.nav-container {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+    margin: 0;
+    width: 100%;
+}
+
+.nav-active {
+    color: orange;
+}
+
+#navbar .logo {
+    width: 50px;
+}
+
+.nav-link {
+    font-size: 30px;
+}
+
+.container-fluid {
+    min-width: 100%;
+}
+
+
+/*Media Queries*/
+
+
+
+/*Junk*/
 /*
 .cards .game-card .card-view {
     display: flex;
@@ -199,50 +263,3 @@ h6 {
     padding: 10px;
     margin: 10px;
 }*/
-
-#gameboard {
-    padding: 10px;
-    border-radius: 10px;
-    background-color: #345030;
-    background-image: url(https://images.pexels.com/photos/2757549/pexels-photo-2757549.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
-    background-color: var(--highlight-color);
-    border-color: #DAF033;
-    box-shadow: 10px 5px 5px var(--secondary-color);
-    width: 100%;
-}
-
-/*Navbar styling*/
-#navbar {
-    background-color: blue;
-    color: greenyellow;
-    font-family: (--secondary-font);
-    font-size: 30px;
-    align-items: end;
-    display: flex;
-    min-width: 100%;
-    top: 0;
-    margin: 0;
-}
-
-.nav-container {
-    padding-right: 0px !important;
-    padding-left: 0px !important;
-    margin: 0;
-    width: 100%;
-}
-
-.nav-active {
-    color: orange;
-}
-
-#navbar .logo {
-    width: 50px;
-}
-
-.nav-link {
-    font-size: 30px;
-}
-
-.container-fluid {
-    min-width: 100%;
-}
