--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ h6 {
 #navbar {
     background-color: var(--primary-color);
     color: greenyellow;
-    font-family: (--secondary-font);
+    font-family: var(--secondary-font);
     font-size: 30px;
     align-items: end;
     display: flex;
@@ -123,15 +123,11 @@ h6 {
     color: var(--primary-color)
 }
 
-.hidden {
-    display: none;
-}
 
 /* Game styling */
 
 #game-section-container {
     display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr;
     grid-gap: 10px;
     justify-content: center;
     align-content: center;
@@ -152,7 +148,6 @@ h6 {
     border-style: solid;
     flex-direction: row;
     backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
     background-color: var(--highlight-color);
     cursor: pointer;
     perspective: 1000px;
@@ -212,14 +207,16 @@ h6 {
     background-color: var(--highlight-color-headers);
     color: #333;
     font-family: var(--primary-font);
-    font-size: 0.75rem;
+    font-size: 1em;
     border: 2px solid;
     justify-content: center;
     display: flex;
-    align-items: center;
     max-width: 200px;
 }
 
+.hidden {
+    display: none;
+}
 
 /*Media Queries*/
 /*Small devices (phones, 576px and smaller) */
